tests/regression/error/hw5_error02.correct
attempt to invoke 'none' value as a function
